Quick suspend/resume: sync not happening if the modem is disabled
When using the quick suspend/resume approach, the logic is limiting the post-resume sync to when the modem was enabled before the suspend. This is not fully right, because if the modem was disabled, we still want to sync the state of things that may have changed during that state, e.g. the SIM card status: SIM may have been ejected, or even a different one inserted.
It could be that some per-interface synchronizations could be limited to when state >= enabled, but at least the Modem interface should also be sync-ed in state >= disabled, so that the SYNCING_STEP_DETECT_SIM_SWAP
logic can be run.