broadband-modem: quick sync the Modem interface also if disabled

If the modem was in disabled state, we still want to sync the Modem
interface, among other things to make sure no SIM event happened
during the system suspension.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/605

(cherry picked from commit dd51defd2be3aac7b31b67b4ae38677f98af1b76)